# xorq-hash-cache

./: .gitignore.template  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-lint.yml  ci-test.yml
src/xorq_hash_cache/: __init__.py  hash_cache.py  hasher.py
src/xorq_hash_cache/tests/: test_hash_cache.py
