[project]
name = "xorq-hash-cache"
version = "0.1.0"
description = "python utility for caching function results"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "attrs>=23.0",
    "cloudpickle>=3.0",
    "toolz>=0.10.0",
    "urllib3>=2.2.3",
    "xorq-dasher>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "pre-commit>=4.2.0",
    "ruff>=0.6.7",
    "pytest>=8.3.5",
]
